--- a/profile.css
+++ b/profile.css
@@ -1,3 +1,25 @@
 body {
     background-color: #333;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    font-family: Ubuntu, sans-serif;
+}
+a, a:focus, a:hover {
+    color: #888;
+}
+.profile-card {
+    max-width: 24em;
+    margin: 48px auto;
+    text-align: center;
+}
+.profile-img {
+    margin: 24px auto;
+    width: 8em;
+    box-shadow: 0px 0px 2px #fff;
+}
+.fa-inverse {
+    text-shadow: -1px -1px 0px #555;
+}
+.list-inline > li {
+    padding: 5px;
 }
