--- a/profile.css
+++ b/profile.css
@@ -8,7 +8,6 @@ a, a:focus, a:hover {
     color: #888;
 }
 .profile-card {
-    max-width: 24em;
     margin: 48px auto;
     text-align: center;
 }
@@ -16,6 +15,9 @@ a, a:focus, a:hover {
     margin: 24px auto;
     width: 8em;
     box-shadow: 0px 0px 2px #fff;
+}
+.social-icons {
+    max-width: 24em;
 }
 .fa-inverse {
     text-shadow: -1px -1px 0px #555;
