--- a/profile.css
+++ b/profile.css
@@ -2,7 +2,7 @@ body {
     background-color: #333;
     color: #fff;
     text-shadow: 1px 1px 1px #000;
-    font-family: Ubuntu, Hannari, sans-serif;
+    font-family: Ubuntu, 'Noto Sans Japanese', sans-serif;
 }
 a, a:focus, a:hover {
     color: #888;
