--- a/profile.css
+++ b/profile.css
@@ -12,6 +12,9 @@ h1 {
     font-size: 22px;
     font-weight: 400;
 }
+.name-ja {
+    display: inline-block;
+}
 .profile-card {
     margin: 48px auto;
     text-align: center;
