--- a/roles/web/files/www-home/profile.css
+++ b/roles/web/files/www-home/profile.css
@@ -12,6 +12,9 @@ h1 {
     font-size: 22px;
     font-weight: 300;
 }
+.fa-stack {
+    font-size: 24px;
+}
 .name-ja {
     display: inline-block;
 }
@@ -25,12 +28,12 @@ h1 {
     box-shadow: 0px 0px 2px #fff;
 }
 .social-icons {
-    max-width: 350px;
+    max-width: 320px;
     margin: 0 auto;
 }
 .fa-inverse {
     text-shadow: -1px -1px 0px #555;
 }
-.list-inline > li {
-    padding: 5px;
+.list-inline-item {
+    margin: 12px 5px !important;
 }
