--- a/roles/web/files/www-home/profile.css
+++ b/roles/web/files/www-home/profile.css
@@ -9,7 +9,7 @@ a, a:focus, a:hover {
     color: #888;
 }
 h1 {
-    font-size: 22px;
+    font-size: 1.5rem;
     font-weight: 300;
 }
 .fa-stack {
